tests/valid/function/top_level_self_recursive_fn_value.facet
fn loop(x: unrestricted isize) -> unrestricted isize {
  let f: unrestricted fn(unrestricted isize) -> unrestricted isize = loop in x
}

fn main() -> unrestricted isize {
  0
}
