tests/invalid/linear_affine_error/linear_used_after_call.facet
fn identity(x: linear isize) -> linear isize {
  x
}

fn f(x: linear isize) -> linear isize {
  let result: linear isize = (identity x);
  x
}
